# staritor-admin-backend

./: .gitignore  Cargo.toml  README.md  Rocket.toml
db/: full.sql
src/: main.rs
src/controller/: mod.rs
src/controller/admin/: mod.rs  resource_controller.rs  user_info_controller.rs
src/dao/: mod.rs  resource_dao.rs  user_info_dao.rs
src/dao/mapper/: mod.rs  prelude.rs  t_resource.rs  t_user_info.rs  user_info_mapper.rs
src/entity/: mod.rs  response.rs
src/entity/base/: config.rs  error.rs  mod.rs  request.rs  response.rs
src/entity/enum/: mod.rs
src/entity/req/: mod.rs  resource_req.rs  user_info_req.rs
src/entity/resp/: mod.rs  resource_resp.rs  user_info_resp.rs
src/util/: mod.rs  validate.rs
