[package]
name = "staritor-admin-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
# Runtime
tokio = "1.44.2"
# Logger
log = "0.4.27"
fast_log = "1.7.6"
# ORM
sea-orm = { version = "1.1.8", features = ["runtime-tokio-rustls", "macros"] }
# Util
thiserror = "2.0.12"
once_cell = "1.21.3"
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.11.1"
chrono = "0.4.40"
anyhow = "1.0.97"

[features]
default = ["sqlx-mysql", "sea-orm/with-chrono", "sea-orm/with-json"]
sqlx-mysql = ["sea-orm/sqlx-mysql"]
sqlx-postgres = ["sea-orm/sqlx-postgres"]
sqlx-sqlite = ["sea-orm/sqlx-sqlite"]

[source.crates-io]
replace-with = 'ustc'
[source.ustc]
registry = "git://mirrors.ustc.edu.cn/crates.io-index"

#[target.x86_64-unknown-linux-musl]
#linker = "x86_64-linux-musl-gcc"
#rustflags = ["-C", "target-feature=+crt-static"]
